--- a/.github/workflows/stack-init.yaml
+++ b/.github/workflows/stack-init.yaml
@@ -67,8 +67,8 @@ jobs:
         with:
           inlineScript: |
             az group create --name ${{ secrets.AZURE_WEBAPP_NAME }}-ResourceGroup --location westus
-            az config set defaults.group=${{ secrets.AZURE_WEBAPP_NAME }-ResourceGroup defaults.location=westus
-            az webapp up --name ${{ secrets.AZURE_WEBAPP_NAME } --logs --launch-browser
+            az config set defaults.group=${{ secrets.AZURE_WEBAPP_NAME }}-ResourceGroup defaults.location=westus
+            az webapp up --name ${{ secrets.AZURE_WEBAPP_NAME }} --logs --launch-browser
       - uses: azure/appservice-settings@v1
         with:
           app-name: ${{ secrets.AZURE_WEBAPP_NAME }}
