--- a/.github/workflows/stack-init.yaml
+++ b/.github/workflows/stack-init.yaml
@@ -66,7 +66,8 @@ jobs:
         uses: azure/CLI@v1
         with:
           inlineScript: |
-            az webapp up --name ${{ secrets.AZURE_WEBAPP_NAME }} --logs --launch-browser
+            az appservice plan create --name ${{ secrets.AZURE_WEBAPP_NAME }}-plan
+            az webapp create --name ${{ secrets.AZURE_WEBAPP_NAME }} --plan ${{ secrets.AZURE_WEBAPP_NAME }}-plan
       - uses: azure/appservice-settings@v1
         with:
           app-name: ${{ secrets.AZURE_WEBAPP_NAME }}
