--- a/.github/workflows/stack-init.yaml
+++ b/.github/workflows/stack-init.yaml
@@ -66,7 +66,7 @@ jobs:
         uses: azure/CLI@v1
         with:
           inlineScript: |
-            az appservice plan create --name ${{ secrets.AZURE_WEBAPP_NAME }}-plan
+            az appservice plan create --name ${{ secrets.AZURE_WEBAPP_NAME }}-plan --resource-group harks
             az webapp create --name ${{ secrets.AZURE_WEBAPP_NAME }} --plan ${{ secrets.AZURE_WEBAPP_NAME }}-plan
       - uses: azure/appservice-settings@v1
         with:
