--- a/.github/workflows/stack-init.yaml
+++ b/.github/workflows/stack-init.yaml
@@ -67,7 +67,7 @@ jobs:
         with:
           inlineScript: |
             az appservice plan create --name ${{ secrets.AZURE_WEBAPP_NAME }}-plan --resource-group harks
-            az webapp create --name ${{ secrets.AZURE_WEBAPP_NAME }} --plan ${{ secrets.AZURE_WEBAPP_NAME }}-plan --resource-group harks
+            az webapp create --name ${{ secrets.AZURE_WEBAPP_NAME }} --runtime 'Python|3.9' --plan ${{ secrets.AZURE_WEBAPP_NAME }}-plan --resource-group harks
       - uses: azure/appservice-settings@v1
         with:
           app-name: ${{ secrets.AZURE_WEBAPP_NAME }}
